assets/scss/organisms/article-deepdive/_article-authors.scss
.article-authors {
    margin-top: 33px;
    margin-bottom: 100px;

    @include breakpoint(small only) {
        margin-bottom: 70px;
    }

    .authors-container {

        @include breakpoint(small only) {
            flex-direction: column;
        }

        .authors-information {
            display: flex;
            flex-wrap: wrap;
            margin-top: 30px;
            margin-right: -30px;

            @include breakpoint(medium down) {
                margin-right: -20px;
            }

            @include breakpoint(small only) {
                margin-top: 0;
            }
        }

        .author-item {
            display: flex;
            margin-right: 30px;

            @include breakpoint(medium down) {
                margin-left: 0;
                margin-top: 40px;
                margin-right: 20px;
            }

            &.no-image {
                width: calc(25% - 30px);

                @include breakpoint(small only) {
                    width: calc(50% - 30px);
                }
            }
        }
    }

    .author-image {
        &.active-image {
            margin-right: 25px;
        }
    }

    .author-info {
        margin-top: 20px;

        .author-name a:hover {
            color: $dark-blue-2;
        }

        .job-position {
            margin-top: 15px;
        }

        .author-name {
            font-weight: $bold;
            text-transform: uppercase;
        }
    }
}

